--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pop-up</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>Chrome Extensions Demo 🎉🎉</h1>
-    <p>by: Aivee Kei</p>
-    <button id="button">Click me</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pop-up</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="title">Todo List</div>
+    <hr />
+    <div class="tasks">
+      <div class="list">
+      </div>
+    </div>
+    <div class="addTask">
+      <input id="input-field" type="text" placeholder="Task Name">
+      <button class="add">Add</button>
+    </div>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
